--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -567,7 +567,7 @@
       </div>
       <div class="contact-item">
         <div class="icon">📱</div>
-        <p>WhatsApp: 0805 807 9900</p>
+        <p><a href="https://wa.me/2348058079900" target="_blank">WhatsApp: 0805 807 9900</a></p>
       </div>
     </div>
   </div>
