--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -206,6 +206,24 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous" defer></script>
+  <!-- Auto-collapse script (after Bootstrap) -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const navLinks = document.querySelectorAll('.navbar-collapse .nav-link');
+      const navbarCollapse = document.querySelector('.navbar-collapse');
+
+      navLinks.forEach(function(link) {
+        link.addEventListener('click', function () {
+          if (navbarCollapse.classList.contains('show')) {
+            const bsCollapse = new bootstrap.Collapse(navbarCollapse, {
+              toggle: true
+            });
+          }
+        });
+      });
+    });
+  </script>
+
   <script>
     // Global JS variable for reCAPTCHA
     const recaptchaSiteKey = "{{ recaptcha_site_key }}";
