--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
     <p>
       From foundational coding to advanced cloud and DevOps, you'll gain the skills required to thrive in the global tech ecosystem.
     </p>
-    <a href="#courses" class="cta-button">Start Your Journey</a>
+    <a href="#register" class="cta-button">Start Your Journey</a>
   </div>
 </section>
 <section id="about" class="scroll-reveal py-5">
